--- a/index.html
+++ b/index.html
@@ -30,21 +30,168 @@
 
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
         <!-- Assistant Card Images -->
-        <img src="/images/zoe.jpg" alt="Zoe" class="rounded-2xl shadow-md hover:shadow-violet-500/20 transition duration-300">
-        <img src="/images/arlo.jpg" alt="Arlo" class="rounded-2xl shadow-md hover:shadow-violet-500/20 transition duration-300">
-        <img src="/images/lena.jpg" alt="Lena" class="rounded-2xl shadow-md hover:shadow-violet-500/20 transition duration-300">
-        <img src="/images/james.jpg" alt="James" class="rounded-2xl shadow-md hover:shadow-violet-500/20 transition duration-300">
-        <img src="/images/ethan.jpg" alt="Ethan" class="rounded-2xl shadow-md hover:shadow-violet-500/20 transition duration-300">
-        <img src="/images/aisha.jpg" alt="Aisha" class="rounded-2xl shadow-md hover:shadow-violet-500/20 transition duration-300">
-        <img src="/images/ava.jpg" alt="Ava" class="rounded-2xl shadow-md hover:shadow-violet-500/20 transition duration-300">
-        <img src="/images/leo.jpg" alt="Leo" class="rounded-2xl shadow-md hover:shadow-violet-500/20 transition duration-300 opacity-30 grayscale cursor-not-allowed">
-        <img src="/images/mia.jpg" alt="Mia" class="rounded-2xl shadow-md hover:shadow-violet-500/20 transition duration-300">
-        <img src="/images/sarah.jpg" alt="Sarah" class="rounded-2xl shadow-md hover:shadow-violet-500/20 transition duration-300">
-        <img src="/images/josiah.jpg" alt="Josiah" class="rounded-2xl shadow-md hover:shadow-violet-500/20 transition duration-300">
-        <img src="/images/lucas.jpg" alt="Lucas" class="rounded-2xl shadow-md hover:shadow-violet-500/20 transition duration-300">
-        <img src="/images/sophie.jpg" alt="Sophie" class="rounded-2xl shadow-md hover:shadow-violet-500/20 transition duration-300">
-        <img src="/images/isaac.jpg" alt="Isaac" class="rounded-2xl shadow-md hover:shadow-violet-500/20 transition duration-300">
-        <img src="/images/tyler.jpg" alt="Tyler" class="rounded-2xl shadow-md hover:shadow-violet-500/20 transition duration-300">
+        <div class="bg-slate-800 rounded-2xl overflow-hidden shadow-md hover:shadow-violet-500/20 transition duration-300 text-center">
+  <img src="/images/zoe.jpg" alt="Zoe" class="w-full h-auto">
+  <div class="p-4">
+    <h3 class="text-lg font-semibold text-white">Zoe</h3>
+    <p class="text-xs text-gray-400 mb-3">AI Assistant</p>
+    <div class="flex justify-center gap-2">
+      <button class="bg-violet-600 text-sm px-3 py-1 rounded">Open</button>
+      <button class="bg-slate-700 border border-violet-500 text-violet-300 text-sm px-3 py-1 rounded">Power-Ups</button>
+    </div>
+  </div>
+</div>
+        <div class="bg-slate-800 rounded-2xl overflow-hidden shadow-md hover:shadow-violet-500/20 transition duration-300 text-center">
+  <img src="/images/arlo.jpg" alt="Arlo" class="w-full h-auto">
+  <div class="p-4">
+    <h3 class="text-lg font-semibold text-white">Arlo</h3>
+    <p class="text-xs text-gray-400 mb-3">AI Assistant</p>
+    <div class="flex justify-center gap-2">
+      <button class="bg-violet-600 text-sm px-3 py-1 rounded">Open</button>
+      <button class="bg-slate-700 border border-violet-500 text-violet-300 text-sm px-3 py-1 rounded">Power-Ups</button>
+    </div>
+  </div>
+</div>
+        <div class="bg-slate-800 rounded-2xl overflow-hidden shadow-md hover:shadow-violet-500/20 transition duration-300 text-center">
+  <img src="/images/lena.jpg" alt="Lena" class="w-full h-auto">
+  <div class="p-4">
+    <h3 class="text-lg font-semibold text-white">Lena</h3>
+    <p class="text-xs text-gray-400 mb-3">AI Assistant</p>
+    <div class="flex justify-center gap-2">
+      <button class="bg-violet-600 text-sm px-3 py-1 rounded">Open</button>
+      <button class="bg-slate-700 border border-violet-500 text-violet-300 text-sm px-3 py-1 rounded">Power-Ups</button>
+    </div>
+  </div>
+</div>
+        <div class="bg-slate-800 rounded-2xl overflow-hidden shadow-md hover:shadow-violet-500/20 transition duration-300 text-center">
+  <img src="/images/james.jpg" alt="James" class="w-full h-auto">
+  <div class="p-4">
+    <h3 class="text-lg font-semibold text-white">James</h3>
+    <p class="text-xs text-gray-400 mb-3">AI Assistant</p>
+    <div class="flex justify-center gap-2">
+      <button class="bg-violet-600 text-sm px-3 py-1 rounded">Open</button>
+      <button class="bg-slate-700 border border-violet-500 text-violet-300 text-sm px-3 py-1 rounded">Power-Ups</button>
+    </div>
+  </div>
+</div>
+        <div class="bg-slate-800 rounded-2xl overflow-hidden shadow-md hover:shadow-violet-500/20 transition duration-300 text-center">
+  <img src="/images/ethan.jpg" alt="Ethan" class="w-full h-auto">
+  <div class="p-4">
+    <h3 class="text-lg font-semibold text-white">Ethan</h3>
+    <p class="text-xs text-gray-400 mb-3">AI Assistant</p>
+    <div class="flex justify-center gap-2">
+      <button class="bg-violet-600 text-sm px-3 py-1 rounded">Open</button>
+      <button class="bg-slate-700 border border-violet-500 text-violet-300 text-sm px-3 py-1 rounded">Power-Ups</button>
+    </div>
+  </div>
+</div>
+        <div class="bg-slate-800 rounded-2xl overflow-hidden shadow-md hover:shadow-violet-500/20 transition duration-300 text-center">
+  <img src="/images/aisha.jpg" alt="Aisha" class="w-full h-auto">
+  <div class="p-4">
+    <h3 class="text-lg font-semibold text-white">Aisha</h3>
+    <p class="text-xs text-gray-400 mb-3">AI Assistant</p>
+    <div class="flex justify-center gap-2">
+      <button class="bg-violet-600 text-sm px-3 py-1 rounded">Open</button>
+      <button class="bg-slate-700 border border-violet-500 text-violet-300 text-sm px-3 py-1 rounded">Power-Ups</button>
+    </div>
+  </div>
+</div>
+        <div class="bg-slate-800 rounded-2xl overflow-hidden shadow-md hover:shadow-violet-500/20 transition duration-300 text-center">
+  <img src="/images/ava.jpg" alt="Ava" class="w-full h-auto">
+  <div class="p-4">
+    <h3 class="text-lg font-semibold text-white">Ava</h3>
+    <p class="text-xs text-gray-400 mb-3">AI Assistant</p>
+    <div class="flex justify-center gap-2">
+      <button class="bg-violet-600 text-sm px-3 py-1 rounded">Open</button>
+      <button class="bg-slate-700 border border-violet-500 text-violet-300 text-sm px-3 py-1 rounded">Power-Ups</button>
+    </div>
+  </div>
+</div>
+        <div class="bg-slate-800 rounded-2xl overflow-hidden shadow-md transition duration-300 text-center opacity-30 grayscale cursor-not-allowed">
+  <img src="/images/leo.jpg" alt="Leo" class="w-full h-auto">
+  <div class="p-4">
+    <h3 class="text-lg font-semibold text-white">Leo</h3>
+    <p class="text-xs text-gray-400 mb-3">Startup AI Assistant</p>
+    <button class="bg-slate-700 text-sm px-4 py-1 rounded text-gray-400 cursor-not-allowed">Locked</button>
+  </div>
+</div>
+        <div class="bg-slate-800 rounded-2xl overflow-hidden shadow-md hover:shadow-violet-500/20 transition duration-300 text-center">
+  <img src="/images/mia.jpg" alt="Mia" class="w-full h-auto">
+  <div class="p-4">
+    <h3 class="text-lg font-semibold text-white">Mia</h3>
+    <p class="text-xs text-gray-400 mb-3">AI Assistant</p>
+    <div class="flex justify-center gap-2">
+      <button class="bg-violet-600 text-sm px-3 py-1 rounded">Open</button>
+      <button class="bg-slate-700 border border-violet-500 text-violet-300 text-sm px-3 py-1 rounded">Power-Ups</button>
+    </div>
+  </div>
+</div>
+        <div class="bg-slate-800 rounded-2xl overflow-hidden shadow-md hover:shadow-violet-500/20 transition duration-300 text-center">
+  <img src="/images/sarah.jpg" alt="Sarah" class="w-full h-auto">
+  <div class="p-4">
+    <h3 class="text-lg font-semibold text-white">Sarah</h3>
+    <p class="text-xs text-gray-400 mb-3">AI Assistant</p>
+    <div class="flex justify-center gap-2">
+      <button class="bg-violet-600 text-sm px-3 py-1 rounded">Open</button>
+      <button class="bg-slate-700 border border-violet-500 text-violet-300 text-sm px-3 py-1 rounded">Power-Ups</button>
+    </div>
+  </div>
+</div>
+        <div class="bg-slate-800 rounded-2xl overflow-hidden shadow-md hover:shadow-violet-500/20 transition duration-300 text-center">
+  <img src="/images/josiah.jpg" alt="Josiah" class="w-full h-auto">
+  <div class="p-4">
+    <h3 class="text-lg font-semibold text-white">Josiah</h3>
+    <p class="text-xs text-gray-400 mb-3">AI Assistant</p>
+    <div class="flex justify-center gap-2">
+      <button class="bg-violet-600 text-sm px-3 py-1 rounded">Open</button>
+      <button class="bg-slate-700 border border-violet-500 text-violet-300 text-sm px-3 py-1 rounded">Power-Ups</button>
+    </div>
+  </div>
+</div>
+        <div class="bg-slate-800 rounded-2xl overflow-hidden shadow-md hover:shadow-violet-500/20 transition duration-300 text-center">
+  <img src="/images/lucas.jpg" alt="Lucas" class="w-full h-auto">
+  <div class="p-4">
+    <h3 class="text-lg font-semibold text-white">Lucas</h3>
+    <p class="text-xs text-gray-400 mb-3">AI Assistant</p>
+    <div class="flex justify-center gap-2">
+      <button class="bg-violet-600 text-sm px-3 py-1 rounded">Open</button>
+      <button class="bg-slate-700 border border-violet-500 text-violet-300 text-sm px-3 py-1 rounded">Power-Ups</button>
+    </div>
+  </div>
+</div>
+        <div class="bg-slate-800 rounded-2xl overflow-hidden shadow-md hover:shadow-violet-500/20 transition duration-300 text-center">
+  <img src="/images/sophie.jpg" alt="Sophie" class="w-full h-auto">
+  <div class="p-4">
+    <h3 class="text-lg font-semibold text-white">Sophie</h3>
+    <p class="text-xs text-gray-400 mb-3">AI Assistant</p>
+    <div class="flex justify-center gap-2">
+      <button class="bg-violet-600 text-sm px-3 py-1 rounded">Open</button>
+      <button class="bg-slate-700 border border-violet-500 text-violet-300 text-sm px-3 py-1 rounded">Power-Ups</button>
+    </div>
+  </div>
+</div>
+        <div class="bg-slate-800 rounded-2xl overflow-hidden shadow-md hover:shadow-violet-500/20 transition duration-300 text-center">
+  <img src="/images/isaac.jpg" alt="Isaac" class="w-full h-auto">
+  <div class="p-4">
+    <h3 class="text-lg font-semibold text-white">Isaac</h3>
+    <p class="text-xs text-gray-400 mb-3">AI Assistant</p>
+    <div class="flex justify-center gap-2">
+      <button class="bg-violet-600 text-sm px-3 py-1 rounded">Open</button>
+      <button class="bg-slate-700 border border-violet-500 text-violet-300 text-sm px-3 py-1 rounded">Power-Ups</button>
+    </div>
+  </div>
+</div>
+        <div class="bg-slate-800 rounded-2xl overflow-hidden shadow-md hover:shadow-violet-500/20 transition duration-300 text-center">
+  <img src="/images/tyler.jpg" alt="Tyler" class="w-full h-auto">
+  <div class="p-4">
+    <h3 class="text-lg font-semibold text-white">Tyler</h3>
+    <p class="text-xs text-gray-400 mb-3">AI Assistant</p>
+    <div class="flex justify-center gap-2">
+      <button class="bg-violet-600 text-sm px-3 py-1 rounded">Open</button>
+      <button class="bg-slate-700 border border-violet-500 text-violet-300 text-sm px-3 py-1 rounded">Power-Ups</button>
+    </div>
+  </div>
+</div>
       </div>
     </main>
   </div>
