--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body class="bg-gradient-to-br from-slate-800 to-slate-950 text-white min-h-screen">
   <div class="flex min-h-screen">
     <!-- Sidebar -->
-    <aside class="w-48 bg-slate-900 text-white flex flex-col py-6 space-y-6">
+    <aside class="w-48 bg-violet-950 text-white flex flex-col py-6 space-y-6">
       <div class="flex items-center px-6 space-x-2 cursor-pointer hover:text-violet-400">
         <i data-feather="home"></i><span>Home</span>
       </div>
