--- a/index.html
+++ b/index.html
@@ -33,23 +33,23 @@
 <body class="bg-gradient-to-br from-slate-800 to-slate-950 text-white min-h-screen">
   <div class="flex min-h-screen">
     <!-- Sidebar -->
-    <aside class="w-48 bg-violet-950 text-white flex flex-col py-6 space-y-6">
-      <div class="flex items-center px-6 space-x-2 cursor-pointer hover:text-violet-400">
+    <aside class="w-48 bg-violet-800 text-white flex flex-col py-6 space-y-6">
+      <div class="flex items-center px-6 space-x-2 cursor-pointer hover:text-violet-200">
         <i data-feather="home"></i><span>Home</span>
       </div>
-      <div class="flex items-center px-6 space-x-2 cursor-pointer hover:text-violet-400">
+      <div class="flex items-center px-6 space-x-2 cursor-pointer hover:text-violet-200">
         <i data-feather="zap"></i><span>Apps</span>
       </div>
-      <div class="flex items-center px-6 space-x-2 cursor-pointer hover:text-violet-400">
+      <div class="flex items-center px-6 space-x-2 cursor-pointer hover:text-violet-200">
         <i data-feather="users"></i><span>Team</span>
       </div>
-      <div class="flex items-center px-6 space-x-2 cursor-pointer hover:text-violet-400">
+      <div class="flex items-center px-6 space-x-2 cursor-pointer hover:text-violet-200">
         <i data-feather="bar-chart-2"></i><span>Stats</span>
       </div>
-      <div class="flex items-center px-6 space-x-2 cursor-pointer hover:text-violet-400">
+      <div class="flex items-center px-6 space-x-2 cursor-pointer hover:text-violet-200">
         <i data-feather="book-open"></i><span>Docs</span>
       </div>
-      <div class="mt-auto flex items-center px-6 space-x-2 cursor-pointer hover:text-violet-400" onclick="openSettings()">
+      <div class="mt-auto flex items-center px-6 space-x-2 cursor-pointer hover:text-violet-200" onclick="openSettings()">
         <i data-feather="settings"></i><span>Settings</span>
       </div>
     </aside>
@@ -68,7 +68,7 @@
         <img src="images/ethan.jpg" alt="Ethan" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
         <img src="images/aisha.jpg" alt="Aisha" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
         <img src="images/ava.jpg" alt="Ava" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
-        <img src="images/leo.jpg" alt="Leo" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
+        <img src="images/leo.jpg" alt="Leo" class="rounded-xl shadow-xl transition duration-300 opacity-30 grayscale cursor-not-allowed">
         <img src="images/mia.jpg" alt="Mia" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
         <img src="images/sarah.jpg" alt="Sarah" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
         <img src="images/elsa.jpg" alt="Elsa" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
