--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body class="bg-gradient-to-br from-slate-800 to-slate-950 text-white min-h-screen">
   <div class="flex min-h-screen">
     <!-- Sidebar -->
-    <aside class="w-48 bg-violet-800 text-white flex flex-col py-6 space-y-6">
+    <aside class="w-48 bg-violet-800 text-white flex flex-col py-6 space-y-6 fixed top-0 left-0 h-full z-40">
       <div class="flex items-center px-6 space-x-2 cursor-pointer hover:text-violet-200">
         <i data-feather="home"></i><span>Home</span>
       </div>
@@ -55,7 +55,7 @@
     </aside>
 
     <!-- Main Content -->
-    <main class="flex-grow p-10">
+    <main class="flex-grow p-10 ml-48">
       <h1 class="text-4xl font-bold text-center mb-2">East-West AI Platform</h1>
       <p id="workspace-title" class="text-center text-gray-300 mb-12">My AI Workspace</p>
 
