--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </aside>
 
     <!-- Main Content -->
-    <main class="flex-grow p-10 ml-48 bg-violet-950">
+   <main class="flex-grow p-10 pl-48 bg-violet-950">
       <h1 class="text-4xl font-bold text-center mb-2">East-West AI Platform</h1>
       <p id="workspace-title" class="text-center text-gray-300 mb-12">My AI Workspace</p>
 
