--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
       <div class="mt-auto flex items-center px-6 space-x-2 cursor-pointer hover:text-violet-200" onclick="openSettings()">
         <i data-feather="settings"></i><span>Settings</span>
       </div>
+      <div class="sidebar">
+           <!--profile image & text-->
+            <!--menu item-->
+        </div>
     </aside>
 
     <!-- Main Content -->
