--- a/index.html
+++ b/index.html
@@ -52,14 +52,10 @@
       <div class="mt-auto flex items-center px-6 space-x-2 cursor-pointer hover:text-violet-200" onclick="openSettings()">
         <i data-feather="settings"></i><span>Settings</span>
       </div>
-      <div class="sidebar">
-           <!--profile image & text-->
-            <!--menu item-->
-        </div>
     </aside>
 
     <!-- Main Content -->
-   <main class="flex-grow p-10 pl-48 bg-violet-950">
+    <main class="flex-grow p-10 pl-48 bg-violet-950">
       <h1 class="text-4xl font-bold text-center mb-2">East-West AI Platform</h1>
       <p id="workspace-title" class="text-center text-gray-300 mb-12">My AI Workspace</p>
 
@@ -72,7 +68,7 @@
         <img src="images/ethan.jpg" alt="Ethan" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
         <img src="images/aisha.jpg" alt="Aisha" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
         <img src="images/ava.jpg" alt="Ava" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
-        <img src="images/leo.jpg" alt="Leo" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
+        <img src="images/leo.jpg" alt="Leo" class="rounded-xl shadow-xl transition duration-300 opacity-30 grayscale cursor-not-allowed">
         <img src="images/mia.jpg" alt="Mia" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
         <img src="images/sarah.jpg" alt="Sarah" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
         <img src="images/elsa.jpg" alt="Elsa" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
