--- a/index.html
+++ b/index.html
@@ -33,30 +33,36 @@
 <body class="bg-gradient-to-br from-slate-800 to-slate-950 text-white min-h-screen">
   <div class="flex min-h-screen">
     <!-- Sidebar -->
-    <aside class="w-56 bg-black text-white flex flex-col py-6 space-y-6 fixed top-0 left-0 h-full z-40 border-r-4 border-yellow-400">
-      <div class="text-center font-bold text-xl mb-4">Menu</div>
-      <div class="flex items-center px-6 space-x-2 cursor-pointer hover:text-yellow-300">
-        <i data-feather="home"></i><span>Home</span>
+    <aside class="w-20 bg-slate-900 text-white flex flex-col py-6 space-y-6 fixed top-0 left-0 h-full z-40">
+      <div class="text-center font-bold text-lg mb-4">☰</div>
+      <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-yellow-300 relative">
+        <i data-feather="home"></i>
+        <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity">Home</span>
       </div>
-      <div class="flex items-center px-6 space-x-2 cursor-pointer hover:text-yellow-300">
-        <i data-feather="zap"></i><span>Apps</span>
+      <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-yellow-300 relative">
+        <i data-feather="zap"></i>
+        <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity">Apps</span>
       </div>
-      <div class="flex items-center px-6 space-x-2 cursor-pointer hover:text-yellow-300">
-        <i data-feather="users"></i><span>Team</span>
+      <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-yellow-300 relative">
+        <i data-feather="users"></i>
+        <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity">Team</span>
       </div>
-      <div class="flex items-center px-6 space-x-2 cursor-pointer hover:text-yellow-300">
-        <i data-feather="bar-chart-2"></i><span>Stats</span>
+      <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-yellow-300 relative">
+        <i data-feather="bar-chart-2"></i>
+        <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity">Stats</span>
       </div>
-      <div class="flex items-center px-6 space-x-2 cursor-pointer hover:text-yellow-300">
-        <i data-feather="book-open"></i><span>Docs</span>
+      <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-yellow-300 relative">
+        <i data-feather="book-open"></i>
+        <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity">Docs</span>
       </div>
-      <div class="mt-auto flex items-center px-6 space-x-2 cursor-pointer hover:text-yellow-300" onclick="openSettings()">
-        <i data-feather="settings"></i><span>Settings</span>
+      <div class="mt-auto group flex justify-center items-center px-2 cursor-pointer hover:text-yellow-300 relative" onclick="openSettings()">
+        <i data-feather="settings"></i>
+        <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity">Settings</span>
       </div>
     </aside>
 
     <!-- Main Content -->
-    <main class="flex-grow p-10 pl-72 bg-violet-950">
+    <main class="flex-grow p-10 pl-32 bg-gradient-to-br from-slate-800 to-slate-950">
       <h1 class="text-4xl font-bold text-center mb-2">East-West AI Platform</h1>
       <p id="workspace-title" class="text-center text-gray-300 mb-12">My AI Workspace</p>
 
@@ -69,7 +75,7 @@
         <img src="images/ethan.jpg" alt="Ethan" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
         <img src="images/aisha.jpg" alt="Aisha" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
         <img src="images/ava.jpg" alt="Ava" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
-        <img src="images/leo.jpg" alt="Leo" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
+        <img src="images/leo.jpg" alt="Leo" class="rounded-xl shadow-xl transition duration-300 opacity-30 grayscale cursor-not-allowed">
         <img src="images/mia.jpg" alt="Mia" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
         <img src="images/sarah.jpg" alt="Sarah" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
         <img src="images/elsa.jpg" alt="Elsa" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
