--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
   </script>
 </head>
 
-<body class="bg-[#111827] text-white min-h-screen">
+<body class="bg-[#8C8CCF] text-white min-h-screen">
   <div class="flex min-h-screen">
     <!-- Sidebar -->
-    <aside class="w-20 bg-[#1f2937] text-white flex flex-col py-6 space-y-6 fixed top-0 left-0 h-full z-40">
+    <aside class="w-20 bg-[#1F395C] text-white flex flex-col py-6 space-y-6 fixed top-0 left-0 h-full z-40">
       <div class="text-center font-bold text-lg mb-4">☰</div>
       <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-yellow-300 relative">
         <i data-feather="home"></i>
@@ -62,7 +62,7 @@
     </aside>
 
     <!-- Main Content -->
-    <main class="flex-grow p-10 pl-32 bg-[#111827]">
+    <main class="flex-grow p-10 pl-32 bg-[#8C8CCF]">
       <h1 class="text-4xl font-bold text-center mb-2">East-West AI Platform</h1>
       <p id="workspace-title" class="text-center text-gray-300 mb-12">My AI Workspace</p>
 
@@ -75,7 +75,7 @@
         <img src="images/ethan.jpg" alt="Ethan" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
         <img src="images/aisha.jpg" alt="Aisha" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
         <img src="images/ava.jpg" alt="Ava" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
-        <img src="images/leo.jpg" alt="Leo" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
+        <img src="images/leo.jpg" alt="Leo" class="rounded-xl shadow-xl transition duration-300 opacity-30 grayscale cursor-not-allowed">
         <img src="images/mia.jpg" alt="Mia" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
         <img src="images/sarah.jpg" alt="Sarah" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
         <img src="images/elsa.jpg" alt="Elsa" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
