--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </script>
 </head>
 
-<body class="bg-[#8C8CCF] text-white min-h-screen">
+<body class="bg-violet-300" text-white min-h-screen">
   <div class="flex min-h-screen">
     <!-- Sidebar -->
     <aside class="w-20 bg-[#1F395C] text-white flex flex-col py-6 space-y-6 fixed top-0 left-0 h-full z-40">
