--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body class="bg-rose-300" text-white min-h-screen">
   <div class="flex min-h-screen">
     <!-- Sidebar -->
-    <aside class="w-20 bg-[#1F395C] text-white flex flex-col py-6 space-y-6 fixed top-0 left-0 h-full z-40">
+    <aside class="w-20 "bg-Violet-500" text-white flex flex-col py-6 space-y-6 fixed top-0 left-0 h-full z-40">
       <div class="text-center font-bold text-lg mb-4">☰</div>
       <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-yellow-300 relative">
         <i data-feather="home"></i>
