--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </aside>
 
     <!-- Main Content -->
-    <main class="flex-grow p-10 pl-32 bg-[#8C8CCF]">
+    <main class="flex-grow p-10 pl-32 bg-Purple-500">
       <h1 class="text-4xl font-bold text-center mb-2">East-West AI Platform</h1>
       <p id="workspace-title" class="text-center text-gray-300 mb-12">My AI Workspace</p>
 
