--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
   <!-- Settings Panel -->
   <div id="settings-panel" class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
-    <div class="bg-white text-black p-6 rounded-xl w-96 space-y-4">
+    <div class="bg-Purple text-black p-6 rounded-xl w-96 space-y-4">
       <h2 class="text-xl font-bold">Settings</h2>
       <label class="block">Your Name:
         <input id="owner-name" class="w-full border p-2 rounded mt-1" placeholder="e.g. Stephen's Workspace">
