--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <img src="images/ethan.jpg" alt="Ethan" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
         <img src="images/aisha.jpg" alt="Aisha" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
         <img src="images/ava.jpg" alt="Ava" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
-        <img src="images/leo.jpg" alt="Leo" class="rounded-xl shadow-xl transition duration-300 opacity-30 grayscale cursor-not-allowed">
+        <img src="images/leo.jpg" alt="Leo" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
         <img src="images/mia.jpg" alt="Mia" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
         <img src="images/sarah.jpg" alt="Sarah" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
         <img src="images/elsa.jpg" alt="Elsa" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
@@ -96,7 +96,7 @@
       </label>
       <label class="block">Background Theme:
         <select id="bg-color" class="w-full border p-2 rounded mt-1">
-          <option value="">Default (Slate)</option>
+          <option value="">Default (Purple-500)</option>
           <option value="bg-gradient-to-br from-indigo-800 to-blue-900">Indigo Blue</option>
           <option value="bg-gradient-to-br from-pink-700 to-red-900">Pink Red</option>
           <option value="bg-gradient-to-br from-green-700 to-teal-900">Green Teal</option>
