--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <img src="images/ethan.jpg" alt="Ethan" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
         <img src="images/aisha.jpg" alt="Aisha" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
         <img src="images/ava.jpg" alt="Ava" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
-        <img src="images/leo.jpg" alt="Leo" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
+        <img src="images/leo.jpg" <img src="images/leo.jpg" alt="Leo" class="rounded-xl shadow-xl transition duration-300 opacity-30 grayscale cursor-not-allowed">
         <img src="images/mia.jpg" alt="Mia" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
         <img src="images/sarah.jpg" alt="Sarah" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
         <img src="images/elsa.jpg" alt="Elsa" class="rounded-xl shadow-xl hover:shadow-violet-500/30 transition duration-300">
